add github page

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "arena-wallpaper-admin",
+  "homepage": "https://phongnguyenhh1996.github.io/arena-wallpaper-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^2.2.0",
     "ra-data-json-server": "^3.5.2",
     "react": "^16.13.1",
     "react-admin": "^3.5.2",
@@ -13,6 +15,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
